# root_plot_utils

./: .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  download.sh  example.sh  pyproject.toml  run.sh  setup.py
.idx/: dev.nix
configs/: run_task.yaml
configs/canvas/: default.yaml
configs/histograms/: default.yaml  idpvm_efficiencies.yaml  idpvm_hits.yaml  idpvm_resolution.yaml  idpvm_tailfrac.yaml  idpvm_tp.yaml  rel24_idpvm_efficiencies.yaml  rel24_idpvm_hits.yaml  rel24_idpvm_hits_and_parameters.yaml  rel24_idpvm_resolution.yaml
configs/hydra/: default.yaml
configs/task/: compare_two_files.yaml  default.yaml  plot_histograms.yaml
data/gnn4itk/: idpvm.ckf.local.gnn4itkTriton.none.MuonPU0.root  idpvm.gnn4itkML.triton.gnn4itkTriton.tracking.MuonPU0.root  paper2025data_v2.idpvm.ckf.ttbar.root  paper2025data_v2.idpvm.gnn4itkTriton.tracking.ttbar.root
root_plot_utils/: adder.py  maker.py  ploter.py
scripts/: find_all_histograms.py  my_app.py  run_vroot.py
src/vroot/: __about__.py  hparams_mixin.py  run_vroot.py
src/vroot/configs/: run_task.yaml
src/vroot/configs/canvas/: with_ratio.yaml
src/vroot/configs/extras/: default.yaml
src/vroot/configs/histograms/: default.yaml  rel24_idpvm_efficiencies.yaml  rel24_idpvm_fakerate.yaml  rel24_idpvm_hits.yaml  rel24_idpvm_parameters.yaml  rel24_idpvm_resolution.yaml  rel24_idpvm_tracks.yaml
src/vroot/configs/hydra/: default.yaml
src/vroot/configs/paths/: default.yaml
src/vroot/scripts/: find_all_histograms.py  my_app.py
src/vroot/task/: base.py  compare_two_files.py  plot_one_file.py  test_task.py
src/vroot/tools/: AtlasStyle.C  AtlasStyle.py  adder.py  canvas.py  histograms.py  maker.py  ploter.py  ratio.py  reader.py
src/vroot/utils/: __init__.py  pylogger.py  resolvers.py  rich_utils.py  utils.py
vroot/: AtlasStyle.py  hparams_mixin.py
vroot/configs/task/: test.yaml
vroot/task/: base.py  compare_two_files.py  plot_one_file.py
vroot/tools/: AtlasStyle.py  adder.py  canvas.py  histograms.py  plot_options.py  ploter.py  ratio.py  reader.py
vroot/utils/: resolvers.py
