[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "vroot"
version = "1.1.1"
description = 'Tools for ploting with ROOT'
readme = "README.md"
authors = [
  { name = "Xiangyang Ju", email = "xju@lbl.gov" },
]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "hydra-core",
    "hydra-colorlog",
    "hydra-optuna-sweeper",
    "numpy",
    "rich",
    "ruff (>=0.11.10,<0.12.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
]

[project.scripts]
run_vroot = "vroot.run_vroot:main"

[project.urls]
Documentation = "https://github.com/xju2/root_plot_utils#readme"
Issues = "https://github.com/xju2/root_plot_utils/issues"
Source = "https://github.com/xju2/root_plot_utils"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "~=8.2.1"
pytest-cov = "~=5.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings-python = "^1.16.10"
pymdown-extensions = "^10.14.3"

[tool.ruff]
line-length = 100
target-version = "py39"
preview = true
lint.select = ["ALL"]
lint.ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D205", "D401", "D203", "D213", "D107", "D413",
    "S101", "S404", "S602", "S403", "S105", "S301", "PLR2004", "PLR0912", "PLR0913",
    "PLR0914", "PLR0915", "PLR0917", "PLC0415", "PLW1514", "PLR6301", "PLR1702", "PLR0904",
    "F401", "E501", "PD901", "C901", "I001", "COM", "EM", "FIX", "FBT", "G004",
    "N802", "N803", "N806", "N812", "T201", "PTH123", "RUF015", "RUF017", "ERA", "ISC001",
    "RET504", "SLF001", "TD003", "ARG002", "N999", "TRY201", "TRY003", "ANN204", "ANN202",
    "ANN001", "ANN201", "ANN003", "CPY001", "TCH002"
]
exclude = ["*.ipynb"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.paths]
vroot = ["src/vroot", "*/vroot/src/vroot"]
tests = ["tests", "*/vroot/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
